Code refactor to create all working and output directories if they don't exist and updated dependencies.